[project]
name = "wellbeing-feed-rl"
version = "1.0.0"
description = "RL environment simulating social media content recommendation balancing engagement with mental wellbeing"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "gradio>=4.0.0",
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]
 
[project.optional-dependencies]
dev = ["pytest"]
 
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
 